--- a/Exam2Coding.vcxproj.filters
+++ b/Exam2Coding.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="City.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Itinerary.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="City.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Itinerary.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
